Changed System.out.println to logger